# print_it_telegram_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: config.py  converter.py  file_manager.py  handlers.py  logger.py  main.py  printer.py
